# window_manage

./: LICENSE  README.md
WindowsStageManager/: CMakeLists.txt
WindowsStageManager/include/: StageManagerAPI.h
WindowsStageManager/src/: StageManagerAPI.cpp  main.cpp
WindowsStageManager/src/core/: StageManager.cpp  StageManager.h  WindowManager.cpp  WindowManager.h
WindowsStageManager/src/events/: EventHandler.cpp  EventHandler.h  HookManager.cpp
WindowsStageManager/src/ui/: AnimationSystem.cpp  LayoutEngine.cpp  ThumbnailRenderer.cpp  ThumbnailRenderer.h
WindowsStageManager/src/utils/: WindowUtils.cpp  WindowUtils.h
exported-assets-3/: chart_script.py  script.py  script_1.py  stage-manager-code.md
exported-assets-4/: api-selection-guide.md  chart_script.py  chart_script_1.py  window_management_apis.csv
todo_list/exported-assets-3/: script_2.py  stage_manager_apis.csv  stage_manager_architecture.csv
todo_list/exported-assets-4/: api_comparison.csv  script.py  window-automation-api-guide.md
